fixed: the muliti spaces are collapsed into a single space in the blog page

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,7 @@ main {
 #none {
   display: none;
 }
+
+p {
+  white-space: pre-wrap;
+}
